--- a/yao.yun/product_page/css/storetheme.css
+++ b/yao.yun/product_page/css/storetheme.css
@@ -1,3 +1,17 @@
+
+
+
+.container {
+     display: flex;
+     align-items: center;
+}
+nav ul li {
+    display: inline-block;
+    list-style: none;
+    margin: 0 20px ;
+    padding-left: 60px;
+}
+
 .card {
     background-color: var(--color-white);
     padding: 1em;
@@ -38,4 +52,6 @@ body {
 }
 *, *::before, *::after {
     box-sizing: border-box;
-}
+    nav {
+        align-items: right;
+    }
