--- a/yao.yun/product_page/css/storetheme.css
+++ b/yao.yun/product_page/css/storetheme.css
@@ -1,5 +1,5 @@
 
-
+/*
 
 .container {
      display: flex;
@@ -55,3 +55,61 @@ body {
     nav {
         align-items: right;
     }
+    */
+
+    :root {
+        --color-neutral-lighter:#f4f2ea;
+        --color-neutral-light:#efecdf;
+        --color-neutral-medium:#dbd7c3;
+        --color-neutral-dark:#bab399;
+     }
+     
+     
+     body {
+        background-color:#f8f8fa;
+        padding-bottom:10em;
+     }
+     
+     
+     
+     
+     /* PRODUCT IN LIST */
+     .product {
+        margin:0;
+        /*padding:1em;*/
+        box-shadow:0 0 10px rgba(0,0,0,0.1);
+        border-radius:1em;
+        position:relative;
+        overflow:hidden;
+        background-color:var(--color-neutral-lighter);
+        display:inline-block;
+        transition:all 0.3s;
+        font-weight:normal;
+     }
+     .product:hover {
+        text-decoration:none;
+        box-shadow:0 0 15px rgba(0,0,0,0.3);
+     }
+     .product-image img {
+        max-width:100%;
+        vertical-align:middle;
+     }
+     .product-caption {
+        padding:1em;
+     }
+     .product-price {
+        font-size:1.2em;
+     }
+     .product-title {
+        font-size:0.9em;
+     }
+     
+     
+     
+     
+     
+     @media (max-width:500px) {
+        :root {
+           --header-height:2rem;
+        }
+     }
