--- a/yao.yun/lib/css/styleguide.css
+++ b/yao.yun/lib/css/styleguide.css
@@ -106,9 +106,10 @@
  /* LAYOUT CLASSES */
  .container {
     max-width:1000px;
-    margin-left: 1em;
+    margin-left: auto;
     margin-right: auto;
     padding-top: 0.5em;
+    padding-left: 1em;
  }
 
  
