--- a/yao.yun/css/storetheme.css
+++ b/yao.yun/css/storetheme.css
@@ -76,26 +76,21 @@ body {
      /* PRODUCT IN LIST */
      .product {
         margin:0;
-        /*padding:1em;*/
-        box-shadow:0 0 10px rgba(0,0,0,0.1);
-        border-radius:1em;
+        border-radius:0.5em;
         position:relative;
         overflow:hidden;
         background-color:var(--color-neutral-lighter);
         display:inline-block;
         transition:all 0.3s;
-        font-weight:normal;
+       
      }
      .product:hover {
         text-decoration:none;
         box-shadow:0 0 15px rgba(0,0,0,0.3);
      }
      .product-image img {
-        position: absolute;
-        object-fit: cover;
-
-        max-width:100%;
-        vertical-align:middle;
+         max-width:100%;
+         vertical-align:middle;
      }
      .product-caption {
         padding:1em;
@@ -105,11 +100,28 @@ body {
      }
      .product-title {
         font-size:0.9em;
+        font-weight: 500;
      }
+
+     .product-list .product {
+      height:100%;
+      width: 100%;
+   }
+
+     .image-main {
+        width:100%;
+        height:0;
+        position:relative;
+        padding-bottom:70%;
+     }
+
      .image-main img {
-        position: relative;
+        position: absolute;
+        top: 0;
+        left: 0;
         width: 100%;
         height: 100%;
+        object-fit: cover;
      }
      
      .image-thumbs img {
@@ -128,10 +140,42 @@ body {
      .product-list [class*='col-']>.card {
         height:100%;
      }
+
+     .card-section {
+      margin-top: 1em;
+      padding-top: 1em;
+   
+   }
+
+   
+
+   .navbar .badge {
+      position: absolute;
+      top: 0;
+      right: -0.5em;
+      font-size: 0.5em;
+      padding: 0.4em;
+      border-radius: 1em;
+      background-color: black;
+      color: white;
+      line-height: 1;
+      pointer-events: none;
+   }
+   
+   .navbar .badge:empty {
+      display:none;
+   }
      
-     
-     @media (max-width:500px) {
-        :root {
-           --header-height:2rem;
-        }
-     }
+   media (max-width:1800px) {
+      .container {
+         padding-left: 10px;
+         padding-right: 10px;
+   }
+   }
+   
+   
+   @media (max-width:500px) {
+      :root {
+         --header-height:2rem;
+      }
+   }
