--- a/yao.yun/css/storetheme.css
+++ b/yao.yun/css/storetheme.css
@@ -89,8 +89,8 @@ body {
         box-shadow:0 0 15px rgba(0,0,0,0.3);
      }
      .product-image img {
-      position: absolute;
-      object-fit: cover;
+      position: relative;
+      /* object-fit: cover; */
          max-width:100%;
          vertical-align:middle;
      }
@@ -112,9 +112,9 @@ body {
 
      .image-main {
         width:100%;
-        height:0;
+        height:100%;
         position:relative;
-        padding-bottom:70%;
+        padding-bottom:100%;
      }
 
      .image-main img {
