--- a/yao.yun/lib/css/styleguide.css
+++ b/yao.yun/lib/css/styleguide.css
@@ -31,7 +31,7 @@
     --header-height:3rem;
  
  
-    --font-sans: 'Lato', Source sans pro, sans-serif;
+    --font-sans: 'Lato', sans-serif;
     --font-serif: 'Playfair Display', serif;
  }
  
@@ -55,40 +55,40 @@
     text-align: left;
     font-size:2.5em;
     font-family: playfair display;
-    color: var(--color-main-dark);
+    color: var(--color-text-dark);
  }
  h2 {
     text-align: left;
     font-size:2.3em;
     font-family: playfair display;
-    color: var(--color-main-dark);
+    color: var(--color-text-dark);
  }
  h3{
     
     font-size:2em;
     text-align: left;
     font-family: source sans pro;
-    color: var(--color-main-dark);
+    color: var(--color-text-dark);
  }
  h4 {
     text-align: left;
     font-size:1.5em;
     font-family: source sans pro;
-    color: var(--color-main-dark);
+    color: var(--color-text-dark);
     margin:1em 0;
  }
  h5 {
     text-align: left;
     font-size:1.3em;
     font-family: source sans pro;
-    color: var(--color-main-dark);
+    color: var(--color-text-dark);
     margin:1em 0;
  }
  h6 {
     text-align: left;
     font-size:1em;
     font-family: source sans pro;
-    color: var(--color-main-dark);
+    color: var(--color-text-dark);
     margin:1em 0;
  }
  
@@ -108,7 +108,7 @@
  
  /* LAYOUT CLASSES */
  .container {
-    max-width:1000px;
+    max-width:1200px;
     margin-left: auto;
     margin-right: auto;
    
@@ -169,7 +169,10 @@
  
  .nav a {
     display:block;
-    padding:0.2em 0.5em;
+    padding:0.2em 1em;
+    font-family: var(--font-sans);
+    font-weight: 800;
+    font-size: 0.9em;
  }
  .nav a:hover {
     /* background-color:var(--color-main-medium); */
@@ -284,7 +287,15 @@
     .card.flat {
        padding:1em;
     }
- 
+ .card.front{
+    background-color:var(--color-sub-medium);
+    width: 100%;
+    padding:2em; 
+    margin-bottom: 0;
+    margin-top:3em;
+    position:relative;
+    overflow:hidden;
+ }
  
     .card>:first-child { margin-top:0; }
     .card>:last-child { margin-bottom:0; }
@@ -398,9 +409,9 @@
      font-size: 0.8em;
      color:var(--color-neutral-medium);
  }
- .form-button {
+/* .form-button {
     display:inline-block;
-    width:100%;
+    width:80%;
     border-width:0;
     background-color:var(--color-neutral-light);
     padding:0.5em 1em;
@@ -412,24 +423,53 @@
     cursor:pointer;
     transition:all 0.3s;
     -webkit-appearance:none;
- }
- .form-button:hover {
+ }*/
+/* .form-button:hover {
     text-decoration:none;
     box-shadow:0 0 10px var(--color-neutral-light);
- }
+ }*/
  .form-button:active {
     background-color:var(--color-main-light);
  }
  
  .form-button.sell {
-    background-color:black;
+    background-color: var(--color-text-dark);
+    border-radius: 0.3em;
     color:var(--color-white);
+    font-family: var(--font-serif);
+    font-size: 1em;
+    font-weight: 500;
  }
  .form-button.sell:active {
     background-color:var(--color-sell-dark);
  }
- 
- 
+ .form-button.bold {
+    background-color: #ed1665;
+    border-radius: 0.3em;
+    color:var(--color-white);
+    font-family: var(--font-serif);
+    font-size: 1em;
+    font-weight: 500;
+ }
+
+ .form-button.bold:hover {
+      background-color: var(--color-black);
+ }
+
+ .form-button.simple {
+    border: 1px solid #726359;
+    border-radius: 0.1em;
+    background-color: white;
+    color: var(--color-text-light);
+    font-family: var(--font-sans);
+    font-size: 1em;
+    font-weight: 500;
+ }
+  .form-button.simple:hover {
+      background-color: var(--color-black);
+      color: white;
+ }
+
 
  
  
@@ -502,24 +542,29 @@
 
  /* Button */
  .form-button {
-    width: 300px;
+    width: 250px;
     height: 60px;
     background-color: var(--color-sub-dark);
-    border-radius:0.3em;
+    border-radius:0.2em;
+    border-width:0;
     font-family: playfair display;
     color: white;
-    margin-bottom: 25px;
+   /* margin-bottom: 25px;*/
     border-radius: 32px;
     text-align: center;
     cursor: pointer;
+    text-decoration:none;
+    outline:0;
     transition: all 0.1s ease-in-out;
+    -webkit-appearance:none;
 
  }
 
  .form-button:hover {
-    opacity: 0.3;
-    box-shadow: -6px -6px 10px rgba(255, 255, 255, 0.8),
-      6px 6px 10px rgba(0, 0, 0, 0.2);
+  
+    background-color: var(--color-black);
+  /*  box-shadow: -6px -6px 10px rgba(255, 255, 255, 0.8),
+      6px 6px 10px rgba(0, 0, 0, 0.2);*/
 
  }
 
