responsive nav bar

--- a/yao.yun/css/storetheme.css
+++ b/yao.yun/css/storetheme.css
@@ -1,62 +1,4 @@
 
-/*
-
-.container {
-     display: flex;
-     align-items: center;
-}
-nav ul li {
-    display: inline-block;
-    list-style: none;
-    margin: 0 20px ;
-    padding-left: 60px;
-}
-
-.card {
-    background-color: var(--color-white);
-    padding: 1em;
-    margin-bottom: 1em;
-    margin-top: 1em;
-    position: relative;
-    overflow: hidden;
-}
-*, *::before, *::after {
-    box-sizing: border-box;
-}
-user agent stylesheet
-article {
-    display: block;
-}
-body {
-    margin: 0;
-    font-size: 100%;
-    font-family: var(--font-sans);
-}
-:root {
-    --color-neutral-light: #e9e2e5;
-    --color-neutral-medium: #94888e;
-    --color-neutral-dark: #4a3f43;
-}
-:root {
-    --color-neutral-light: #e4e2e9;
-    --color-neutral-medium: #8c8894;
-    --color-neutral-dark: #423f4a;
-    --color-white: #fff;
-    --color-black: #111;
-    --header-height: 3rem;
-    --font-sans: Helvetica, Arial, sans-serif;
-    --font-serif: Cambria, Georgia, "Times New Roman", serif;
-}
-*, *::before, *::after {
-    box-sizing: border-box;
-}
-*, *::before, *::after {
-    box-sizing: border-box;
-    nav {
-        align-items: right;
-    }
-    */
-
     :root {
         --color-neutral-lighter:#f4f2ea;
         --color-neutral-light:#efecdf;
@@ -186,14 +128,14 @@ body {
 
    .navbar .badge {
       position: relative;
-      top: 0.5em;
+      top: 5px;
       right: -0.5em;
-      font-size: 0.7em;
-      padding: 0.2em;
-      border-radius: 1em;
+      font-size: 0.8em;
+      padding: 0.5em;
+      border-radius:3em;
       background-color: black;
       color: white;
-      line-height: 1;
+      line-height: 0.8;
       pointer-events: none;
    }
    
@@ -201,9 +143,10 @@ body {
       display:none;
    }
 
-article {
+/*article {
     display: block;
-}
+}*/
+
 
 
 
@@ -326,15 +269,38 @@ article {
 
 /* galleryslider-end */
   
-   @media (max-width:1000px) {
-      .container {
-         padding-left: 10px;
-         padding-right: 10px;
-      }
+  .nav-toggle label {
+   display:none;
+}
+
+  @media (max-width:1000px) {
+   .container {
+      padding-left:10px;
+      padding-right:10px;
    }
-   
-   @media (max-width:500px) {
-      :root {
-         --header-height:2rem;
-      }
+}
+@media (max-width:500px) {
+   :root {
+      --header-height:3rem;
    }
+
+   .navbar .container {
+      flex-wrap:wrap;
+   }
+   .navbar .nav {
+      display:none;
+   }
+   .nav-toggle label {
+      display:block;
+      padding:0 0.5em;
+   }
+   #nav-toggle:checked + .navbar .nav {
+      display:block;
+      width:100%;
+   }
+   #nav-toggle:checked + .navbar .nav ul {
+      display:block;
+      line-height: 2;
+      padding-bottom: 0.5em;
+   }
+}
