--- a/yao.yun/lib/css/styleguide.css
+++ b/yao.yun/lib/css/styleguide.css
@@ -23,7 +23,9 @@
  
     --color-white:#fff;
     --color-black:#161622;
- 
+
+  
+    --color-text-lighter:#f5ede8;
     --color-text-light:#726359;
     --color-text-dark:#413933;
  
@@ -67,27 +69,27 @@
     
     font-size:2em;
     text-align: left;
-    font-family: source sans pro;
+    font-family: Lato;
     color: var(--color-text-dark);
  }
  h4 {
     text-align: left;
     font-size:1.5em;
-    font-family: source sans pro;
+    font-family: Lato;
     color: var(--color-text-dark);
     margin:1em 0;
  }
  h5 {
     text-align: left;
     font-size:1.3em;
-    font-family: source sans pro;
+    font-family: Lato;
     color: var(--color-text-dark);
     margin:1em 0;
  }
  h6 {
     text-align: left;
     font-size:1em;
-    font-family: source sans pro;
+    font-family: Lato;
     color: var(--color-text-dark);
     margin:1em 0;
  }
@@ -181,6 +183,7 @@
  }
  
     .crumbs ul,
+    .pills ul,
     .nav.flex ul,
     .nav.stretch ul {
        display:flex;
@@ -191,6 +194,11 @@
        text-align:center;
     }
  
+  .nav.pills a {
+      padding:0.5em 1em;
+      border-radius:2em;
+   }
+
  
     .crumbs li:not(:first-child)::before {
        content:'»';
@@ -215,11 +223,10 @@
    
    }
    .navbar a {
-      position: relative;
+      position: block;
    }
 
  .navbar h1 {
-    font-family:var(--font-sans);
     font-size:1em;
     padding-top: 0 0.5em;
     margin:0;
@@ -588,18 +595,26 @@
  .footer-inner {
    
    background-color: #362509;
+   color: var(--color-text-lighter);
    width: 100%;
+   height: 40vh;
+    padding-top: 2em;
    margin-top: 8em;
    margin-bottom: 0;
    overflow: hidden;
 
+}
+
+.footer-inner ul li {
+    list-style-type: none;
+    margin: 0.6em 0;
 
 }
  
 .footerfont {
     font-family: var(--font-sans);
-    font-size: 3em;
-    color: var(--color-neutral-light);
+    font-size: 1em;
+    color: var(--color-text-lighter);
  
    line-height: 2em;
 
