--- a/yao.yun/css/storetheme.css
+++ b/yao.yun/css/storetheme.css
@@ -146,7 +146,92 @@
 /*article {
     display: block;
 }*/
+.ourstory {
+  width: 100%;
+   text-align: center;
+}
 
+
+.ourstory span{
+  font-family: var(--font-sans);
+  font-weight: 200;
+
+}
+
+.ourstory-top h3 {
+  color: var(--color-text-lighter);
+  padding-left: 1.6em;
+  align-content: center;
+}
+
+.ourstory h4 {
+  color: var(--color-text-light);
+  
+  text-align: center;
+}
+/*imagebox start */
+section {
+  height: 80vh;
+  display: flex;
+  
+}
+
+.room-gallery {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--color-neutral-lighter);
+}
+
+.room-description {
+  width: 50%;
+  padding: 2em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /*background-color: var(--color-sub-light);*/
+  
+}
+.room-description h1 {
+  padding: 10px;
+  font-size: 1.5em;
+  font-family:var(--font-serif);
+  color: var(--color-text-dark);
+}
+.room-description p {
+  font-family: var(--font-sans);
+  font-size: 1em;
+  padding-right: 10px;
+  color: var(--color-text-dark);
+  font-weight: 200;
+}
+.gallery-hightlight {
+  width: 80%;
+  height: 50%;
+}
+
+.room-preview {
+  display: flex;
+  width: 80%;
+  
+}
+.room-preview img {
+  flex-grow: 1;
+  height: 100px;
+  opacity: 0.5;
+  transition: opacity 0.4s ease;
+  cursor: pointer;
+}
+
+img.room-active {
+  opacity: 1;
+}
+
+
+/*imagebox end */
 
 
 
